# bitcurry

./: .ghci  .gitignore  LICENSE  LICENSE.md  README.md  bitcurry.cabal
src/: BTError.hs  Bencode.hs  PeerToPeer.hs  Tracker.hs  TrackerClient.hs  tracker.hs
test/: Debug.lhs  Test.hs  archlinux.torrent  bible.torrent  codeV2.torrent  freeculture.torrent
tests/: test.torrent
