name:                bitcurry
version:             0.1.0.0
synopsis:            a simple command-line bittorrent client
homepage:            github.com/nabilhassein/bitcurry
license:             MIT
license-file:        LICENSE
author:              Nabil Hassein
maintainer:          nabil.hassein@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     TrackerClient, Bencode
  build-depends:       base ==4.5.*
                     , attoparsec ==0.10.*
                     , bytestring ==0.9.*
                     , containers ==0.4.*
                     , HTTP ==4000.2.*
                     , QuickCheck ==2.6.*
                     , random ==1.0.*
                     , SHA ==1.6.*
  hs-source-dirs:      src