name:                bitcurry
version:             0.1.0.0
synopsis:            a simple command-line bittorrent client
homepage:            github.com/nabilhassein/bitcurry
license:             MIT
license-file:        LICENSE
author:              Nabil Hassein
maintainer:          nabil.hassein@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     TrackerClient, Bencode
  build-depends:       base ==4.6.*
                     , attoparsec ==0.10.*
                     , bytestring ==0.10.0.2
                     , containers ==0.5.*
                     , HTTP ==4000.2.*
                     , QuickCheck ==2.6.*
                     , network ==2.4.*
                     , random ==1.0.*
                     , sha ==1.6.*
                     
  hs-source-dirs:      src
  ghc-options:         -Wall
  extensions:          OverloadedStrings

source-repository head
  type:     git
  location: git://github.com/nabilhassein/bitcurry.git
